--- a/OCRwithinBoudningBox.ipynb
+++ b/OCRwithinBoudningBox.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "T4",
       "mount_file_id": "1AE9mSAo8elF28sSKIhDMqXWjkRy-zLjF",
-      "authorship_tag": "ABX9TyPoRWzb2CxaHNe5zlVJeHr4",
+      "authorship_tag": "ABX9TyNANLIsGjwYH5ACh3SnGE9G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,19 +30,37 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Performing OCR using Deep Learning"
+      ],
+      "metadata": {
+        "id": "RbKzDeiNnX13"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Importing and installing libraries & storage of paths and creation of folder"
+      ],
+      "metadata": {
+        "id": "pg2nFdfPnbvr"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "drive.mount('/content/drive',force_remount=True)"
       ],
       "metadata": {
         "id": "Fy9SuY3JnJW7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6b333801-ab03-49d9-ba0f-bb8353572f02"
+        "outputId": "1c1dd5f1-77ea-4578-81ca-dad0a75d0aae"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -58,84 +76,42 @@
       "source": [
         "!pip install -q ultralytics\n",
         "!pip install -q EasyOCR\n",
-        "!pip3 install -q torch torchvision torchaudio\n"
+        "!pip3 install -q torch torchvision torchaudio\n",
+        "!unzip -q /content/drive/MyDrive/my_model.zip -d /content/model\n",
+        "from ultralytics import YOLO\n",
+        "import os\n",
+        "import cv2\n",
+        "import easyocr"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "h83jo1N3fvLP",
-        "outputId": "2cf21f3e-26be-4aed-88b7-7cde796a394a"
+        "outputId": "fbf1323c-2e5b-433d-b92a-9c32bfec2142"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m974.5/974.5 kB\u001b[0m \u001b[31m18.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m363.4/363.4 MB\u001b[0m \u001b[31m4.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.8/13.8 MB\u001b[0m \u001b[31m92.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m24.6/24.6 MB\u001b[0m \u001b[31m69.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m883.7/883.7 kB\u001b[0m \u001b[31m44.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m664.8/664.8 MB\u001b[0m \u001b[31m2.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m211.5/211.5 MB\u001b[0m \u001b[31m5.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.3/56.3 MB\u001b[0m \u001b[31m12.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m127.9/127.9 MB\u001b[0m \u001b[31m6.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m207.5/207.5 MB\u001b[0m \u001b[31m6.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.1/21.1 MB\u001b[0m \u001b[31m55.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.9/2.9 MB\u001b[0m \u001b[31m33.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m422.8/422.8 kB\u001b[0m \u001b[31m23.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m969.6/969.6 kB\u001b[0m \u001b[31m39.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m292.9/292.9 kB\u001b[0m \u001b[31m16.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!unzip -q /content/drive/MyDrive/my_model.zip -d /content/model"
-      ],
-      "metadata": {
-        "id": "lsCK33n9f5MT"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "model_path = \"/content/model/my_model.pt\"\n",
-        "test_image_path = \"/content/drive/MyDrive/Vertical.jpg\""
-      ],
-      "metadata": {
-        "id": "MARzkjv4gB1Q"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from ultralytics import YOLO\n",
-        "model = YOLO(model_path)"
-      ],
-      "metadata": {
-        "id": "1QxtJFSYgOLI",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "2494b65f-7445-4d87-e248-40e8dae10be5"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Creating new Ultralytics Settings v0.0.6 file ✅ \n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m974.5/974.5 kB\u001b[0m \u001b[31m17.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m363.4/363.4 MB\u001b[0m \u001b[31m1.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m13.8/13.8 MB\u001b[0m \u001b[31m87.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m24.6/24.6 MB\u001b[0m \u001b[31m64.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m883.7/883.7 kB\u001b[0m \u001b[31m41.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m664.8/664.8 MB\u001b[0m \u001b[31m2.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m211.5/211.5 MB\u001b[0m \u001b[31m5.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.3/56.3 MB\u001b[0m \u001b[31m15.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m127.9/127.9 MB\u001b[0m \u001b[31m7.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m207.5/207.5 MB\u001b[0m \u001b[31m6.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m21.1/21.1 MB\u001b[0m \u001b[31m69.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.9/2.9 MB\u001b[0m \u001b[31m25.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m422.8/422.8 kB\u001b[0m \u001b[31m18.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m969.6/969.6 kB\u001b[0m \u001b[31m32.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m292.9/292.9 kB\u001b[0m \u001b[31m12.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCreating new Ultralytics Settings v0.0.6 file ✅ \n",
             "View Ultralytics Settings with 'yolo settings' or at '/root/.config/Ultralytics/settings.json'\n",
             "Update Settings with 'yolo settings key=value', i.e. 'yolo settings runs_dir=path/to/dir'. For help see https://docs.ultralytics.com/quickstart/#ultralytics-settings.\n"
           ]
@@ -143,31 +119,108 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### ALL PATHS"
+      ],
+      "metadata": {
+        "id": "qGASwMpFoldO"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "model_path = \"/content/model/my_model.pt\"\n",
+        "test_image_path = \"/content/drive/MyDrive/Vertical.jpg\"\n",
+        "folder_path = '/content/output_images'\n",
+        "predicted_image = '/content/runs/detect/predict/Vertical.jpg'\n",
+        "text_file_path = '/content/runs/detect/predict/labels/Vertical.txt'\n",
+        "output = '/content/output_images'"
+      ],
+      "metadata": {
+        "id": "lsCK33n9f5MT"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Creating a folder wihtin colab to store output images"
+      ],
+      "metadata": {
+        "id": "ve_IV5Icnt18"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "if not os.path.exists(folder_path):\n",
+        "    os.mkdir(folder_path)\n",
+        "else:\n",
+        "    print(f\"Folder '{folder_path}' already exists.\")"
+      ],
+      "metadata": {
+        "id": "hxDIjtgea0FU"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Object Detection"
+      ],
+      "metadata": {
+        "id": "_Hb5kCGUpCOz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Performing YOLO algorithm to detect the image"
+      ],
+      "metadata": {
+        "id": "g8Ozdb-1nkoh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model = YOLO(model_path)\n",
         "results = model.predict(source =  test_image_path, save=True, save_txt=True, show_labels=False, show_conf=False)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "hOdI4_90gO-r",
-        "outputId": "e63e2598-0add-4c37-ea1f-152219173b93"
+        "id": "ZFb7jFugoogD",
+        "outputId": "e97ad59e-e9b7-4cd6-e11e-02772bc0ab99"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            "image 1/1 /content/drive/MyDrive/Vertical.jpg: 448x640 1 Date of birth, 1 Expiry Date, 1 ID Number, 1 Issue Date, 1 Name, 1 Nationality, 603.3ms\n",
-            "Speed: 15.8ms preprocess, 603.3ms inference, 35.8ms postprocess per image at shape (1, 3, 448, 640)\n",
+            "image 1/1 /content/drive/MyDrive/Vertical.jpg: 448x640 1 Date of birth, 1 Expiry Date, 1 ID Number, 1 Issue Date, 1 Name, 1 Nationality, 1140.9ms\n",
+            "Speed: 26.2ms preprocess, 1140.9ms inference, 38.0ms postprocess per image at shape (1, 3, 448, 640)\n",
             "Results saved to \u001b[1mruns/detect/predict\u001b[0m\n",
             "1 label saved to runs/detect/predict/labels\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Function definition to extract bounding box"
+      ],
+      "metadata": {
+        "id": "hKWE2aMjnokL"
+      }
     },
     {
       "cell_type": "code",
@@ -190,33 +243,32 @@
       "metadata": {
         "id": "yTuec0_FgUNJ"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "import os\n",
-        "folder_path = '/content/output_images'\n",
-        "if not os.path.exists(folder_path):\n",
-        "    os.mkdir(folder_path)\n",
-        "else:\n",
-        "    print(f\"Folder '{folder_path}' already exists.\")"
+        "### Extraction of bounding box and storage in output_image"
       ],
       "metadata": {
-        "id": "hxDIjtgea0FU"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "f4sNepwknRy1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Test code"
+      ],
+      "metadata": {
+        "id": "MHxsTs3Sn7La"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "import cv2\n",
-        "predicted_image = '/content/runs/detect/predict/Vertical.jpg'\n",
         "image = cv2.imread(predicted_image)\n",
         "\n",
-        "text_file_path = '/content/runs/detect/predict/labels/Vertical.txt'\n",
         "\n",
         "with open(text_file_path, 'r') as file:\n",
         "    lines = file.readlines()\n",
@@ -236,15 +288,70 @@
         "    cv2.imwrite(f'/content/output_images/cropped_image_{i}.jpg', cropped_region)\n"
       ],
       "metadata": {
-        "id": "U_3rAamjhoDS"
+        "id": "Xf6zJ9OmnQNS"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Performing OCR on the images"
+        "#### Working code"
+      ],
+      "metadata": {
+        "id": "3e2QCuuNnTrY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"image = cv2.imread(predicted_image)\n",
+        "\n",
+        "with open(text_file_path, 'r') as file:\n",
+        "    lines = file.readlines()\n",
+        "\n",
+        "for i , line in enumerate(lines):\n",
+        "  parts = line.split()\n",
+        "  if len(parts) == 5:\n",
+        "    class_id, x_center, y_center, width, height = map(float, parts)\n",
+        "\n",
+        "    img_width = image.shape[0]\n",
+        "    img_height = image.shape[1]\n",
+        "    x_min, y_min, x_max, y_max = boundingbox(img_width,img_height,x_center,y_center,width,height)\n",
+        "\n",
+        "    image = cv2.resize(image, (img_width,img_height))\n",
+        "    cropped_region = image[y_min:y_max, x_min:x_max]\n",
+        "    cv2.imwrite(f'/content/output_images/cropped_image_{i}.jpg', cropped_region)\"\"\"\n"
+      ],
+      "metadata": {
+        "id": "U_3rAamjhoDS",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 105
+        },
+        "outputId": "b7ef9440-ce72-4fc1-f0ef-82bb4fec4ddc"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "\"image = cv2.imread(predicted_image)\\n\\nwith open(text_file_path, 'r') as file:\\n    lines = file.readlines()\\n\\nfor i , line in enumerate(lines):\\n  parts = line.split()\\n  if len(parts) == 5:\\n    class_id, x_center, y_center, width, height = map(float, parts)\\n\\n    img_width = image.shape[0]\\n    img_height = image.shape[1]\\n    x_min, y_min, x_max, y_max = boundingbox(img_width,img_height,x_center,y_center,width,height)\\n\\n    image = cv2.resize(image, (img_width,img_height))\\n    cropped_region = image[y_min:y_max, x_min:x_max]\\n    cv2.imwrite(f'/content/output_images/cropped_image_{i}.jpg', cropped_region)\""
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Performing OCR on images"
       ],
       "metadata": {
         "id": "JUFQjwaBZzYl"
@@ -253,9 +360,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import easyocr\n",
-        "import os\n",
-        "output = '/content/output_images'\n",
         "reader = easyocr.Reader(['en'])\n",
         "result = []\n",
         "for image_path in os.listdir(output):\n",
@@ -267,9 +371,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "af8b2a10-2f4a-4607-e28d-b952cb76e968"
+        "outputId": "d063fdff-1183-4ae4-fa85-f60e1678115b"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -303,6 +407,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Printing result"
+      ],
+      "metadata": {
+        "id": "4VzjoiQLoH3-"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "for (bbox,text,prob) in result:\n",
@@ -313,9 +426,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GmG9Q-76pLn-",
-        "outputId": "da20defa-2314-44eb-aac7-264b714b0996"
+        "outputId": "d6cfe950-919b-46c5-b372-8101a327f477",
+        "collapsed": true
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -330,24 +444,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "LkK3OaBUrSTs"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ZWA37N6TWwlW"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
